create github pages

--- a/get-started.html
+++ b/get-started.html
@@ -87,7 +87,7 @@
     <div class="container">
         <div class="inner-container" style="width: 100%;">
             <hr class="line" style="width: 10%;">
-            <div class="section-text align-center mbr-white mbr-fonts-style display-2"><strong>YOUR SIMPLE STEPS</strong></div>
+            <div class="section-text align-center mbr-white mbr-fonts-style display-2"><strong>SIMPLE SUPPORTED STEPS</strong></div>
             <hr class="line" style="width: 10%;">
         </div>
     </div>
@@ -100,7 +100,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-text col-12 mbr-fonts-style display-5 col-md-10"><div>
-</div><div><strong>The value you will derive from participation, and the value you will create for the Responsible 100 community, is directly related to how many steps you take, and how many of the 22 issues you explore and assess against.</strong></div><div>
+</div><div>The value you will derive from participation, and the value you will create for the Responsible 100 community, is directly related to how many steps you take, and how many of the 22 issues you explore and assess against.</div><div>
 </div><div>
 </div><div> 
 </div><div>
@@ -171,7 +171,7 @@
                 <div class="media-container-row">
                     <div class="media-content">
                         <div class="mbr-section-text">
-                            <p class="mbr-text align-right mb-0 mbr-fonts-style display-5"><strong>PRIORITISE</strong><br><br>We currently look at 22 responsibility issues. They can't all be CRITICAL. So, firstly, indicate the priority level of each issue as you see it for your company.&nbsp;<br><br>This is something one person can do, or something the whole team can be involved in.&nbsp;</p>
+                            <p class="mbr-text align-right mb-0 mbr-fonts-style display-5"><strong>PRIORITISE</strong><br><br>We currently look at 22 responsibility issues. They can't all be CRITICAL. So, firstly, indicate the priority level of each issue as you see it for your company.&nbsp;<br><br>This is something one person can do, or something the whole team can be involved in. <a href="https://forms.gle/gQF6CZ524gswkVaRA" class="text-primary" target="_blank">START NOW</a></p>
                         </div>
                     </div>
                     <div class="mbr-figure" style="width: 170%;">
@@ -225,7 +225,7 @@
     <div class="container">
         <div class="inner-container" style="width: 100%;">
             <hr class="line" style="width: 10%;">
-            <div class="section-text align-center mbr-white mbr-fonts-style display-2"><strong>3. SAY IT SIMPLY</strong></div>
+            <div class="section-text align-center mbr-white mbr-fonts-style display-2"><strong>3. YOUR STORIES IN YOUR WORDS</strong></div>
             <hr class="line" style="width: 10%;">
         </div>
     </div>
@@ -241,11 +241,11 @@
                 <div class="media-container-row">
                     <div class="media-content">
                         <div class="mbr-section-text">
-                            <p class="mbr-text align-right mb-0 mbr-fonts-style display-5"><strong>SAY IT SIMPLY&nbsp;</strong><br><br>We use AI to create draft accounts of what you do based on the selections you make in Step 2.<br><br>It takes only a matter of minutes to do this and to thus get you started.<br><br>But ultimately, you must be satisfied that your responses are complete, accurate and verifiable. Your account of what you do, and your future plans, must be your own accounts in your words.&nbsp;</p>
+                            <p class="mbr-text align-right mb-0 mbr-fonts-style display-5"></p><p><strong>SAY IT SIMPLY&nbsp;</strong><br><br>In no time we'll create draft accounts of what you do based on the selections you make in Step 2.<br><br>These drafts will get you started but,&nbsp;ultimately, you must be satisfied that your responses are complete, accurate and verifiable.</p><br><p>Your account of what you do, and your future plans, must be your own accounts in your words.&nbsp;</p><p></p>
                         </div>
                     </div>
                     <div class="mbr-figure" style="width: 140%;">
-                     <img src="assets/images/better-space-in-speech-bubble-675x621.jpg" alt="">  
+                     <img src="assets/images/better-space-3-1151x1155.png" alt="">  
                     </div>
                 </div>
             </div>
@@ -260,7 +260,7 @@
     <div class="container">
         <div class="inner-container" style="width: 100%;">
             <hr class="line" style="width: 10%;">
-            <div class="section-text align-center mbr-white mbr-fonts-style display-2"><strong>4. SCORE</strong></div>
+            <div class="section-text align-center mbr-white mbr-fonts-style display-2"><strong>4. ASSESS YOUR PERFORMANCE</strong></div>
             <hr class="line" style="width: 10%;">
         </div>
     </div>
@@ -295,7 +295,7 @@
     <div class="container">
         <div class="inner-container" style="width: 100%;">
             <hr class="line" style="width: 10%;">
-            <div class="section-text align-center mbr-white mbr-fonts-style display-2"><strong>5. REPEAT</strong></div>
+            <div class="section-text align-center mbr-white mbr-fonts-style display-2"><strong>5. RESPONSIBILITY INDICATOR&nbsp;</strong></div>
             <hr class="line" style="width: 10%;">
         </div>
     </div>
@@ -311,7 +311,7 @@
                 <div class="media-container-row">
                     <div class="media-content">
                         <div class="mbr-section-text">
-                            <p class="mbr-text align-right mb-0 mbr-fonts-style display-5"><strong>REPEAT&nbsp;</strong><br><strong><br></strong>Your Responsibility Indicator combines all the above, across each of the issues, in one powerful dashboard.<br><br>Use it to set plans for future work and improvements and to keep track of progress.&nbsp;Use it to communicate the stories of what you do both internally, or externally. <br><br><br></p>
+                            <p class="mbr-text align-right mb-0 mbr-fonts-style display-5"><strong>YOUR RESPONSIBILITY INDICATOR</strong><br><strong><br></strong>Your Responsibility Indicator combines all the above, across each of the issues, in one powerful dashboard.<br><br>Use it to set plans for future work and improvements and to keep track of progress.&nbsp;Use it to communicate the stories of what you do both internally, or externally. <br><br><br></p>
                         </div>
                     </div>
                     <div class="mbr-figure" style="width: 170%;">
