create github pages

--- a/get-started.html
+++ b/get-started.html
@@ -241,7 +241,13 @@
                 <div class="media-container-row">
                     <div class="media-content">
                         <div class="mbr-section-text">
-                            <p class="mbr-text align-right mb-0 mbr-fonts-style display-5"></p><p><strong>SAY IT SIMPLY&nbsp;</strong><br><br>In no time we'll create draft accounts of what you do based on the selections you make in Step 2.<br><br>These drafts will get you started but,&nbsp;ultimately, you must be satisfied that your responses are complete, accurate and verifiable.</p><br><p>Your account of what you do, and your future plans, must be your own accounts in your words.&nbsp;</p><p></p>
+                            <p class="mbr-text align-right mb-0 mbr-fonts-style display-5"><strong>SAY IT SIMPLY 
+</strong><br>
+<br>In no time we'll create draft accounts of what you do based on the selections you make in Step 2.
+<br>
+<br>These drafts will get you started but, ultimately, you must be satisfied that your responses are complete, accurate and verifiable.
+<br>
+<br>Your account of what you do, and your future plans, must be your own accounts in your words.&nbsp;</p>
                         </div>
                     </div>
                     <div class="mbr-figure" style="width: 140%;">
